--- a/constellation.kv
+++ b/constellation.kv
@@ -10,19 +10,16 @@
             dash_offset: 5
             dash_length: 3
 
-
 <CustomLabel@Label>:
     size: self.texture_size  # For some reason this and the one below make it work.
     size_hint: None, None
     color: 0, 0, 0, 1
     font_size: 16
 
-
 <TextInputGroup@BoxLayout>:
     size_hint: None, None
     size: self.size[0], 34
     orientation: 'horizontal'
-
 
 <CustomButton@Button>:
     font_name: "Roboto"
@@ -36,7 +33,6 @@
 
     on_state: self.button_pressed()
 
-
 # Custom Widgets
 <CustomNavbar@StackLayout>:
     name: ''
@@ -45,15 +41,15 @@
     pos: self.parent.pos[0], self.parent.height - self.height + self.parent.pos[1]
 
 <CustomSidebar@StackLayout>:
-    name: ''
     orientation: 'tb-lr'
     size_hint_x: None
     size: 350, self.parent.height
     pos: self.parent.pos
 
-<IndustryTab@BoxLayout>:
-    id: industry_tab
-    CustomLabel
+<IndustryWindow@BoxLayout>:
+    orientation: 'vertical'
+    size_hint: None, None
+    CustomLabel:
         text: 'Industry Tab'
         font_size: 96
     TextInputGroup:
@@ -87,7 +83,7 @@
         text: 'Submit'
         id: submit_construction_project
         style_classes: ['button']
-        on_press: industry_tab.submit_construction_project_details(building_type.text.strip(), building_runs.text.strip(), building_factories.text.strip())
+        on_press: root.dank()
 
 
 <GalaxyViewer>:
@@ -182,97 +178,84 @@
                 text: 'Overview'
                 name: 'overview'
                 style_classes: ["link"]
+                on_press: screen_manager_game_menu.current = self.name
 
             CustomButton:
                 text: 'Economy'
                 name: 'economy'
                 style_classes: ["link"]
+                on_press: screen_manager_game_menu.current = self.name
 
             CustomButton:
                 text: 'Industry'
                 name: 'industry'
                 style_classes: ["link"]
-                on_press:
-                    screen_manager_game_menu.current = self.name
+                on_press: screen_manager_game_menu.current = self.name
 
             CustomButton:
                 text: 'Fleets'
                 name: 'fleets'
                 style_classes: ["link"]
-                on_press:
-                    screen_manager_game_menu.current = self.name
+                on_press: screen_manager_game_menu.current = self.name
 
             CustomButton:
                 text: 'Population'
                 name: 'population'
                 style_classes: ["link"]
+                on_press: screen_manager_game_menu.current = self.name
 
             CustomButton:
                 text: 'Politics'
                 name: 'politics'
                 style_classes: ["link"]
+                on_press: screen_manager_game_menu.current = self.name
 
             CustomButton:
                 text: 'Diplomacy'
                 name: 'diplomacy'
                 style_classes: ["link"]
+                on_press: screen_manager_game_menu.current = self.name
 
             CustomButton:
                 text: 'Research'
                 name: 'research'
                 style_classes: ["link"]
+                on_press: screen_manager_game_menu.current = self.name
 
         ScreenManager:
             id: screen_manager_game_menu
             Screen:
-                size: self.parent.size
-                pos: self.parent.pos
+                name: "overview"
+                Button:
+                    text: "Overview"
+            Screen:
+                name: "economy"
+                Button:
+                    text: "Economy"
+            Screen:
                 name: "industry"
-                BoxLayout:
-                    size_hint: None, None
-                    top: self.parent.top
-                    orientation: "vertical"
-                    id: industry_tab
-                    CustomLabel
-                        text: 'Industry Tab'
-                        font_size: 96
-                    TextInputGroup:
-                        CustomLabel:
-                            size: self.size[0], self.parent.height
-                            text: 'Building Type: '
-                        TextInput:
-                            size_hint: None, None
-                            size: self.size[0], 28
-                            id: building_type
-                            text: ''
-                    TextInputGroup:
-                        CustomLabel:
-                            size: self.size[0], self.parent.height
-                            text: 'Runs: '
-                        TextInput:
-                            size_hint: None, None
-                            size: self.size[0], 28
-                            id: building_runs
-                            text: ''
-                    TextInputGroup:
-                        CustomLabel:
-                            size: self.size[0], self.parent.height
-                            text: 'Factories: '
-                        TextInput:
-                            size_hint: None, None
-                            size: self.size[0], 28
-                            id: building_factories
-                            text: ''
-                    CustomButton:
-                        text: 'Submit'
-                        id: submit_construction_project
-                        style_classes: ['button']
-                        on_press: industry_tab.submit_construction_project_details(building_type.text.strip(), building_runs.text.strip(), building_factories.text.strip())
-
+                IndustryWindow:
             Screen:
                 name: "fleets"
                 Button:
-                    text: "Dank"
+                    text: "Fleets"
+            Screen:
+                name: "population"
+                Button:
+                    text: "Population"
+            Screen:
+                name: "politics"
+                Button:
+                    text: "Politics"
+            Screen:
+                name: "diplomacy"
+                Button:
+                    text: "Diplomacy"
+            Screen:
+                name: "research"
+                Button:
+                    text: "Research"
+
 
 <ConstellationWidget>:
     galaxy_viewer: galaxy_viewer_widget
