--- a/constellation.kv
+++ b/constellation.kv
@@ -233,7 +233,7 @@
         on_press: root.handle_menu_transition(self.name)
 
     CustomButton:
-        name: 'colony_overview'
+        name: 'colony_menu'
         text: 'Colony Menu'
         style_classes: ['link']
         on_press: root.handle_menu_transition(self.name)
@@ -258,6 +258,7 @@
         style_classes: ["link"]
 
 <GameMenu>:
+    screen_manager_game_menu: screen_manager_game_menu
     orientation: 'horizontal'
 
     canvas:
@@ -280,6 +281,7 @@
             style_classes: ['link']
 
     ScreenManager:
+        id: screen_manager_game_menu
         Screen:
             name: "empire_menu"
             Button:
