--- a/constellation.kv
+++ b/constellation.kv
@@ -2,9 +2,10 @@
 #:import Window kivy.core.window.Window
 # Custom Styles of default Widgets
 <Widget>:
+    app: app
     canvas.after:
         Color:
-            rgba: (0,1,0,1)
+            rgba: (0,1,0,0)
         Line:
             rectangle: self.x+1,self.y+1,self.width-1,self.height-1
             dash_offset: 5
@@ -206,7 +207,12 @@
             id: submit_construction_project
             text: 'Submit'
             style_classes: ['button']
-            on_press: root.dank()
+            on_press:
+                root.submit_construction_project(
+                building_type=building_type.text.strip(),
+                building_runs=building_runs.text.strip(),
+                factories=building_factories.text.strip()
+                )
 
 # Global Widgets
 <GalaxyNavbar>:
