Start work on table for industrywindow

--- a/constellation.kv
+++ b/constellation.kv
@@ -173,6 +173,9 @@
             id: title
             text: 'Industry Tab'
             font_size: 96
+        GridLayout:
+            # Cols: Project, Factories, Runs, Completion, Resources
+            cols: 5
         TextInputGroup:
             id: building_type_form
             CustomLabel:
