More edits to the game loop.

--- a/constellation.kv
+++ b/constellation.kv
@@ -231,8 +231,7 @@
     empire_menu: empire_menu
     system_menu: system_menu
     gap_widget: gap_widget
-    galaxy_view: galaxy_view
-    system_view: system_view
+    game_time_widget: game_time_widget
     style_classes: ['navbar_dark']
 
     CustomButton:
@@ -271,15 +270,9 @@
         gap_widget: True
 
     CustomButton:
-        id: galaxy_view
-        name: 'galaxy_view'
-        text: 'Galaxy View'
-        style_classes: ["link"]
-
-    CustomButton:
-        id:system_view
-        name: 'system_view'
-        text: 'System View'
+        id: game_time_widget
+        name: 'game_time_widget'
+        text: 'Time: 0-Jan-0'
         style_classes: ["link"]
 
 <GameMenu>:
