--- a/constellation.kv
+++ b/constellation.kv
@@ -276,6 +276,7 @@
         style_classes: ["link"]
 
 <GameMenu>:
+    game_menu_sidebar: game_menu_side_bar
     screen_manager_game_menu: screen_manager_game_menu
     orientation: 'horizontal'
 
@@ -287,6 +288,7 @@
             size: self.size
 
     CustomSidebar:
+        id: game_menu_side_bar
         pos: root.pos
         style_classes: ['sidebar_dark']
         CustomButton:
